S09-APIM_with_Istio/ingress.yaml
# Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: publisher-ingress
  namespace : wso2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
    - hosts:
        - apis.wso2.com
  rules:
    - host: apis.wso2.com
      http:
        paths:
        - path: /
          backend:
            serviceName: wso2apim
            servicePort: 9443

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace : wso2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
    - hosts:
        - gateway.wso2.com
  rules:
    - host: gateway.wso2.com
      http:
        paths:
        - path: /
          backend:
            serviceName: wso2apim
            servicePort: 8243
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mg-ingress
  namespace : istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_ssl_server_name on;
      proxy_ssl_name $host;
spec:
  tls:
    - hosts:
        - mg.wso2.com
  rules:
    - host: mg.wso2.com
      http:
        paths:
        - path: /
          backend:
            serviceName: istio-ingressgateway
            servicePort: 443
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: publisher-ingress1
#   namespace : istio-system
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#     nginx.ingress.kubernetes.io/configuration-snippet: |-
#       proxy_ssl_server_name on;
#       proxy_ssl_name $host;
# spec:
#   tls:
#     - hosts:
#         - apis.wso2.com
#   rules:
#     - host: apis.wso2.com
#       http:
#         paths:
#         - path: /
#           backend:
#             serviceName: istio-ingressgateway
#             servicePort: 443
